tests/errors/missing_enum_name.drast
// # TEST: enum requires a name
// # EXPECT: error
// # ERROR_CONTAINS: expected enum name

enum
	North;
